<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clrDarkBlue"
    tools:context="${packageName}.${activityClass}" >
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="false"
        android:baselineAlignBottom="false"
        android:scaleType="fitCenter"
        android:contentDescription="@string/logodesc"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@color/clrRed" >
        
        <ImageButton
            android:id="@+id/normalSpiral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/nButton"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/nButton"
            android:onClick="openNormalSpiral"
            android:contentDescription="@string/spiraldesc"
            android:src="@drawable/spiral" />

        <Button
            android:id="@+id/nButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="openNormal"
            android:text="@string/normal"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Button01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:onClick="openNormalH"
            android:text="@string/hiscore"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/RelativeLayout2"
        android:layout_marginTop="45dp"
        android:background="@color/clrRed" >
        
        <ImageButton
            android:id="@+id/hardSpiral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/hButton"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/hButton"
            android:onClick="openHardSpiral"
            android:contentDescription="@string/spiraldesc"
            android:src="@drawable/spiral" />

        <Button
            android:id="@+id/hButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="openHard"
            android:text="@string/hard"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Button02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:onClick="openHardH"
            android:text="@string/hiscore"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/RelativeLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="45dp"
        android:background="@color/clrRed" >

        <ImageButton
            android:id="@+id/easySpiral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/eButton"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/eButton"
            android:onClick="openEasySpiral"
            android:contentDescription="@string/spiraldesc"
            android:src="@drawable/spiral" />

        <Button
            android:id="@+id/eButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="openEasy"
            android:text="@string/easy"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:onClick="openEasyH"
            android:text="@string/hiscore"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>